Fix underground logo being cut off

--- a/site/components/footer/style.css
+++ b/site/components/footer/style.css
@@ -165,6 +165,10 @@
     overflow: hidden;
   }
 
+  .footerMap svg {
+    padding-top: 1px;
+  }
+
   .footer {
     align-items: center;
     justify-content: center;
